Fix horizontal scroll on hamburger expansion sitewide

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -215,7 +215,7 @@ p {
 @media (min-width: 768px) and (max-width: 1024px) {
   
   .menu {
-  margin-left: %;
+  margin-left: 45%;
 }
 }
 
